--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,8 +2,7 @@ name: demo-kotlin  # Workflow name
 
 on:      #Trigger when there is push or pull_request on main branch
   push:
-    branches:
-      - main
+    branches: [main, feature ]
   pull_request:
     branches:
       - main
@@ -14,9 +13,14 @@ jobs:    # jobs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Run a one-line script
         run: echo "hello world"
-      
+
+      - name: run a custom script
+        run: |
+          ls -la
+          uptime      
       - name: run a multi-line script
         run: |
           echo "add other action to build"
