--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,8 +44,10 @@ jobs:    # jobs
           docker images
       - name: docker LOGIN
         run: |
-          docker login -u ${{ secrets.dockerusername }} -p ${{ secrets.dockerpassword }}
+          docker login -u ${{ secrets.dockerusername }} --password-stdin ${{ secrets.dockerpassword }}
           cat /home/runner/.docker/config.json
+      - name: docker image push
+        run: docker push techvault2024/demo-kotlin2.0
 
         
     
